@@ -1,5 +1,6 @@
 1.2.8.dev0
  * Include link to issue tracker within various command output.
+ * Run continuous integration tests on a matrix of Python and Borg versions.
 
 1.2.7
  * #98: Support for Borg --keep-secondly prune option.
